Función para obtener el pixel de referencia

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
   "files.associations": {
     "*.embeddedhtml": "html",
-    "xstring": "cpp",
-    "vector": "cpp",
-    "xlocinfo": "cpp",
-    "xutility": "cpp"
+    "tuple": "cpp"
   }
 }
