Single core benchmark

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "*.embeddedhtml": "html",
     "tuple": "cpp",
     "vector": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "ostream": "cpp",
+    "xstring": "cpp"
   }
 }
